--- a/app/src/main/res/layout/ingredients_steps_fragment.xml
+++ b/app/src/main/res/layout/ingredients_steps_fragment.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
     android:layout_gravity="center"
     android:orientation="vertical">
 
@@ -9,18 +14,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="30dp"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:gravity="center"
             android:text="Ingredients List"
+            android:textStyle="bold"
             android:textSize="20sp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_ingredients"
             android:layout_width="match_parent"
+            android:scrollbarStyle="outsideOverlay"
             android:layout_height="100dp">
 
         </android.support.v7.widget.RecyclerView>
@@ -28,13 +36,16 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:gravity="center"
             android:text="Steps"
+            android:textStyle="bold"
             android:textSize="20sp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_steps"
             android:layout_width="match_parent"
+            android:scrollbarStyle="outsideInset"
             android:layout_height="500dp"></android.support.v7.widget.RecyclerView>
     </LinearLayout>
 </ScrollView>
+</RelativeLayout>
