--- a/app/src/main/res/layout/activity_step_details.xml
+++ b/app/src/main/res/layout/activity_step_details.xml
@@ -31,7 +31,14 @@
                 android:layout_height="500dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp" />
-
+            <TextView
+                android:id="@+id/tv_no_video"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:padding="20dp"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:text="Video Not Available"/>
             <TextView
                 android:id="@+id/tv_recipeDescription"
                 android:layout_width="match_parent"
